--- a/paper/shared.tex
+++ b/paper/shared.tex
@@ -200,13 +200,13 @@ Such applications include photo-injector optimization \cite{1742-6596-874-1-0120
 
 \paragraph{Constrained derivative free algorithms}
 To address the rise in these applications, new algorithms are being developed such as \cite{doi:10.1080/10556788.2015.1026968} which is an algorithm similar to the one presented here, but the sample points are not always feasible.
-\cite{Tröltzsch2016} presents another similar algorithm for equality based constraints.
+\cite{Troltzsch2016} presents another similar algorithm for equality based constraints.
 \cite{infeasiblestarting} presents an algorithm which accepts an infeasible starting point.
 \cite{Gao2018} also presents an algorithm for linearly constrained derivative free optimization that uses a backtracking technique to minimize the number of evaluations required.
 
 \paragraph{Subproblems}
 Some work has been done within trust region algorithms to improve the update policy \cite{Kamandi2017}.
-Also, \cite{Verdério2017} and \cite{doi:10.1080/10556780802409296} discuss geometric conditions of the sample points required for global convergence.
+Also, \cite{Verderio2017} and \cite{doi:10.1080/10556780802409296} discuss geometric conditions of the sample points required for global convergence.
 Finally, \cite{AMAIOUA201813} uses a mesh adaptive search to solve quadratic subproblems.
 
 
